k8s/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lugx-frontend
  labels:
    app: lugx-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: lugx-frontend
  template:
    metadata:
      labels:
        app: lugx-frontend
    spec:
      containers:
        - name: lugx-frontend
          image: us-central1-docker.pkg.dev/samathi-lugxgaming/lugx-repo/lugx-frontend:prod
          imagePullPolicy: Always
          ports:
            - containerPort: 80
      restartPolicy: Always
