k8s/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: lugx-frontend
  labels:
    app: lugx-frontend
spec:
  type: ClusterIP
  selector:
    app: lugx-frontend
  ports:
    - name: http
      port: 8080
      targetPort: 80
