k8s/lugx-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: lugx-ingress
  namespace: default
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: lugx-frontend
                port:
                  number: 8080

          - path: /api/games
            pathType: Prefix
            backend:
              service:
                name: game-service
                port:
                  number: 8081

          - path: /api/orders
            pathType: Prefix
            backend:
              service:
                name: order-service
                port:
                  number: 8082

          - path: /api/analytics
            pathType: Prefix
            backend:
              service:
                name: analytics-service
                port:
                  number: 8083
